--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -698,6 +698,9 @@ $sizes: (
     padding: 0 1rem;
   }
   .mob\:{
+    &overflow-auto{
+      overflow: auto;
+    }
     &text-center{
       text-align: center;
     }
@@ -728,6 +731,10 @@ $sizes: (
     &pb-0{
       padding-bottom: 0;
     }
+    &py-0{
+      padding-top: 0;
+      padding-bottom: 0;
+    }
     &py-6{
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
@@ -753,6 +760,12 @@ $sizes: (
     }
     &mr-0{
       margin-right: 0;
+    }
+    &mr-2{
+      margin-right: 0.5rem;
+    }
+    &ml-2{
+      margin-left: 0.5rem;
     }
     &mr-2{
       margin-right: 0.5rem;
