--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -318,6 +318,9 @@ $sizes: (12, 14, 18, 20, 22, 24, 25, 30, 36, 40, 48, 64, 65, 80);
 .pt-2 {
   padding-top: 0.5rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-4 {
   padding-top: 1rem;
 }
